advert-job-category images added